--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
+    "mongoose": "^6.3.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
   }
